# SquaresGgame

./: .gitignore  .pre-commit-config.yaml  .sample-env  .sample-env.txt  CONTRIBUTING.md  Dockerfile  Procfile  README.md  develop.txt  docker-compose.yml  manage.py  railway.json  requirements.txt  test.py  tox.ini
_DockerFiles/: Dockerfile  docker-compose.yml
core/: asgi.py  settings.py  urls.py  wsgi.py
core/settings/: base.py  dev.py  prod.py
game/: consumers.py  consumersold.py  game_handlers.py  routing.py  urls.py  views.py
game/gamelogic/: chat_handlers.py  exceptions.py  game_handlers.py  game_handlersAI.py
game/templates/game/: game.html  home.html  join.html  oldjoin.html
samples/: pyproject.toml
static/css/: global.css  index.css  main.css  newStyle.css  oldmain.css  reset.css  style.css
static/js/: app.js  game.js  gameold.js  home.js
templates/: base.html
